[gd_scene load_steps=16 format=3 uid="uid://cyur00vudnqgy"]

[ext_resource type="Texture2D" uid="uid://bthkdq73cxejp" path="res://addons/Tiny Swords/Factions/Knights/Troops/Warrior/Blue/Warrior_Blue.png" id="1_xr0as"]
[ext_resource type="Script" path="res://player/player.gd" id="1_ypwwh"]
[ext_resource type="PackedScene" uid="uid://c6qk4oqvkv6sp" path="res://misc/aura.tscn" id="2_1j7wy"]
[ext_resource type="PackedScene" uid="uid://dny3nmash2gc4" path="res://misc/skull_toten.tscn" id="3_pcefv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_40eji"]
radius = 19.0263

[sub_resource type="Animation" id="Animation_tg3kx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_7hl0s"]
resource_name = "attack_side_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"apply_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_qgrbg"]
resource_name = "attack_side_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"apply_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_bgpmq"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_fyn65"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7hiy6"]
_data = {
"RESET": SubResource("Animation_tg3kx"),
"attack_side_1": SubResource("Animation_7hl0s"),
"attack_side_2": SubResource("Animation_qgrbg"),
"idle": SubResource("Animation_bgpmq"),
"run": SubResource("Animation_fyn65")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_pu1q1"]
radius = 136.004

[sub_resource type="CircleShape2D" id="CircleShape2D_sftt7"]
radius = 61.131

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_02qux"]
bg_color = Color(0.133333, 0.133333, 0.133333, 0.505882)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ton2"]
bg_color = Color(0.588235, 0.0980392, 0.156863, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_ypwwh")
aura_interval = 10.0
aura_prefab = ExtResource("2_1j7wy")
death_prefab = ExtResource("3_pcefv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -27)
texture = ExtResource("1_xr0as")
hframes = 6
vframes = 8
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_40eji")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_7hiy6")
}

[node name="SwordArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordArea"]
position = Vector2(0, -26)
shape = SubResource("CircleShape2D_pu1q1")
debug_color = Color(0.909804, 0, 0.247059, 0)

[node name="HitboxArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(0, -25)
shape = SubResource("CircleShape2D_sftt7")
debug_color = Color(0.980392, 0.0745098, 0.443137, 0.231373)

[node name="HealthProgress" type="ProgressBar" parent="."]
offset_left = -53.0
offset_top = 17.0
offset_right = 53.0
offset_bottom = 33.0
theme_override_styles/background = SubResource("StyleBoxFlat_02qux")
theme_override_styles/fill = SubResource("StyleBoxFlat_1ton2")
value = 40.13
show_percentage = false
